
	* using CDI library version 1.1.1
	* configure: --with-szlib=<directory>
	* configure: check stat.st_blksize
	* New module: Gridcell (gridarea, gridweights)
	* New operator: del29feb to delete the 29. February [request: Etienne Tourigny]
	* New operator: zaxisdes
	* Exprf: using MT safe version of bison and flex (bug fix) [report: Claas Teichmann]
	* Arithc: recalculate number of missing values (bug fix) [report: Holger Goettel]
	* Vertint: support for data on hybrid half-level
	* Vertint: support for GME data [request: Luis Kornblueh]
	* Vertint: bug fix for input with time constant fields
	* Outputgmt: use grid_mask if present
	* Input: skip ',' from standard input stream
	* splitsel: bug fix for multilevel/multivar datasets [report: Heiner Widmann]
	* remaplib: set luse_grid_corners = TRUE for GRID_CELL (bug fix)
	* remap_conserv: skip very small regions if num_subseg exceeded limit
	* remapcon: bug fix for NORMALIZE_OPT 'dest' and 'none'
	* Seltime: changed value of NOPERATORS (bug fix)
	* Version 1.1.1 released
	
2008-01-24  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.1.0
	* New module: Monarith (monadd, monsub, monmul, mondiv) [request: Daniel Hernandez]
	* Add support for Lambert grids in GRIB files
	* Seltime: bug fix for input with time constant fields [report: Claas Teichmann]
	* Setlevel: bug fix for usage in pipes [report: Claas Teichmann]
	* Outputbounds: use -ZNaN for missing values [request: Karin Meier-Fleischer]
	* Outputbounds: add zonal mean [request: Malte Heinemann]
	* Remap: check for non global grids
	* Setgatts: improve attribute format
	* diff: check number of time steps
	* Timstat: change datetime type from INT64 to char[16]
	* gridWeights: warning with code number when using constant area weights
	* Version 1.1.0 released

2007-10-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* cat: bug fix for large existing output files (>2GB) on 32-bit machines [report: Heinz-Dieter Hollweg]